force-app/main/default/objects/Forecast__c/Forecast__c.object-meta.xml
<CustomObject>
    <label>Forecast</label>
    <nameField>
        <label>Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>