force-app/main/default/objects/Forecast__c/fields/Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Year__c</fullName>
    <formula>if(Year(Today())=Year_Numeric__c,True,False)</formula>
    <label>Current Year</label>
    <type>Checkbox</type>
</CustomField>