force-app/main/default/objects/Forecast__c/fields/Forecast_Id__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Id__c</fullName>
    <externalId>true</externalId>
    <label>Forecast Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>