force-app/main/default/objects/Forecast__c/fields/Initial_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Initial_Forecast__c</fullName>
    <label>Initial Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>