force-app/main/default/objects/Forecast__c/fields/Month_Alpha__c.field-meta.xml
<CustomField>
    <fullName>Month_Alpha__c</fullName>
    <formula>case( Month_Numeric__c ,1,&quot;01 Jan&quot;, 2, &quot;02 Feb&quot;, 3, &quot;03 Mar&quot;, 4, &quot;04 Apr&quot;, 5, &quot;05 May&quot;, 6, &quot;06 Jun&quot;, 7, &quot;07 Jul&quot;, 8, &quot;08 Aug&quot;, 9, &quot;09 Sep&quot;, 10, &quot;10 Oct&quot;, 11, &quot;11 Nov&quot;, 12, &quot;12 Dec&quot;, &quot;NA&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Alpha</label>
    <type>Text</type>
</CustomField>