force-app/main/default/objects/Forecast__c/fields/Month_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Month_Numeric__c</fullName>
    <formula>month(Forecast_Date__c)</formula>
    <label>Month Numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>