force-app/main/default/objects/Forecast__c/fields/Reason_Forecast_Revised__c.field-meta.xml
<CustomField>
    <fullName>Reason_Forecast_Revised__c</fullName>
    <label>Reason Forecast Revised</label>
    <type>TextArea</type>
</CustomField>