force-app/main/default/objects/Forecast__c/fields/Year_Alpha__c.field-meta.xml
<CustomField>
    <fullName>Year_Alpha__c</fullName>
    <formula>TEXT(Year_Numeric__c )</formula>
    <label>Year Alpha</label>
    <type>Text</type>
</CustomField>