force-app/main/default/objects/Forecast__c/fields/Year_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Year_Numeric__c</fullName>
    <formula>Year(Forecast_Date__c)</formula>
    <label>Year Numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>