force-app/main/default/objects/Forecast__c/fields/Year_Today__c.field-meta.xml
<CustomField>
    <fullName>Year_Today__c</fullName>
    <formula>Year(Today())</formula>
    <label>Year Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>